engine/tests/fixtures/invalid/http-cache/entity-task.tg
entity entity_task {
  name "Task"
  description "Task entity"

  fields {
    id uuid required
    updated_at datetime required
  }

  status active
}
